parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> lisp SEMI
Rule 2     lisp -> expression
Rule 3     lisp -> bool
Rule 4     lisp -> list
Rule 5     expression -> NUMBER
Rule 6     expression -> LPRN PLUS expression expression RPRN
Rule 7     expression -> LPRN MINUS expression expression RPRN
Rule 8     expression -> LPRN MULTIPLY expression expression RPRN
Rule 9     expression -> LPRN DIVIDE expression expression RPRN
Rule 10    expression -> LPRN IF bool expression expression RPRN
Rule 11    expression -> LPRN CAR list RPRN
Rule 12    bool -> BOOLEAN
Rule 13    bool -> LPRN AND bool bool RPRN
Rule 14    bool -> LPRN OR bool bool RPRN
Rule 15    bool -> LPRN NOT bool RPRN
Rule 16    bool -> LPRN GTE expression expression RPRN
Rule 17    bool -> LPRN LTE expression expression RPRN
Rule 18    bool -> LPRN GT expression expression RPRN
Rule 19    bool -> LPRN LT expression expression RPRN
Rule 20    bool -> LPRN EQ expression expression RPRN
Rule 21    bool -> LPRN NEQ expression expression RPRN
Rule 22    list -> LPRN array RPRN
Rule 23    array -> <empty>
Rule 24    array -> array expression
Rule 25    list -> LPRN CDR list RPRN
Rule 26    list -> LPRN CONS expression list RPRN

Terminals, with rules where they appear

AND                  : 13
BOOLEAN              : 12
CAR                  : 11
CDR                  : 25
CONS                 : 26
DIVIDE               : 9
EQ                   : 20
GT                   : 18
GTE                  : 16
IF                   : 10
LPRN                 : 6 7 8 9 10 11 13 14 15 16 17 18 19 20 21 22 25 26
LT                   : 19
LTE                  : 17
MINUS                : 7
MULTIPLY             : 8
NEQ                  : 21
NOT                  : 15
NUMBER               : 5
OR                   : 14
PLUS                 : 6
RPRN                 : 6 7 8 9 10 11 13 14 15 16 17 18 19 20 21 22 25 26
SEMI                 : 1
error                : 

Nonterminals, with rules where they appear

array                : 22 24
bool                 : 3 10 13 13 14 14 15
expression           : 2 6 6 7 7 8 8 9 9 10 10 16 16 17 17 18 18 19 19 20 20 21 21 24 26
lisp                 : 1
list                 : 4 11 25 26
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . lisp SEMI
    (2) lisp -> . expression
    (3) lisp -> . bool
    (4) lisp -> . list
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN
    (22) list -> . LPRN array RPRN
    (25) list -> . LPRN CDR list RPRN
    (26) list -> . LPRN CONS expression list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 7
    BOOLEAN         shift and go to state 8

    start                          shift and go to state 1
    lisp                           shift and go to state 2
    expression                     shift and go to state 3
    bool                           shift and go to state 4
    list                           shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> lisp . SEMI

    SEMI            shift and go to state 9


state 3

    (2) lisp -> expression .

    SEMI            reduce using rule 2 (lisp -> expression .)


state 4

    (3) lisp -> bool .

    SEMI            reduce using rule 3 (lisp -> bool .)


state 5

    (4) lisp -> list .

    SEMI            reduce using rule 4 (lisp -> list .)


state 6

    (5) expression -> NUMBER .

    SEMI            reduce using rule 5 (expression -> NUMBER .)
    NUMBER          reduce using rule 5 (expression -> NUMBER .)
    LPRN            reduce using rule 5 (expression -> NUMBER .)
    RPRN            reduce using rule 5 (expression -> NUMBER .)


state 7

    (6) expression -> LPRN . PLUS expression expression RPRN
    (7) expression -> LPRN . MINUS expression expression RPRN
    (8) expression -> LPRN . MULTIPLY expression expression RPRN
    (9) expression -> LPRN . DIVIDE expression expression RPRN
    (10) expression -> LPRN . IF bool expression expression RPRN
    (11) expression -> LPRN . CAR list RPRN
    (13) bool -> LPRN . AND bool bool RPRN
    (14) bool -> LPRN . OR bool bool RPRN
    (15) bool -> LPRN . NOT bool RPRN
    (16) bool -> LPRN . GTE expression expression RPRN
    (17) bool -> LPRN . LTE expression expression RPRN
    (18) bool -> LPRN . GT expression expression RPRN
    (19) bool -> LPRN . LT expression expression RPRN
    (20) bool -> LPRN . EQ expression expression RPRN
    (21) bool -> LPRN . NEQ expression expression RPRN
    (22) list -> LPRN . array RPRN
    (25) list -> LPRN . CDR list RPRN
    (26) list -> LPRN . CONS expression list RPRN
    (23) array -> .
    (24) array -> . array expression

    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    MULTIPLY        shift and go to state 12
    DIVIDE          shift and go to state 13
    IF              shift and go to state 14
    CAR             shift and go to state 15
    AND             shift and go to state 16
    OR              shift and go to state 17
    NOT             shift and go to state 18
    GTE             shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    LT              shift and go to state 22
    EQ              shift and go to state 23
    NEQ             shift and go to state 24
    CDR             shift and go to state 26
    CONS            shift and go to state 27
    RPRN            reduce using rule 23 (array -> .)
    NUMBER          reduce using rule 23 (array -> .)
    LPRN            reduce using rule 23 (array -> .)

    array                          shift and go to state 25

state 8

    (12) bool -> BOOLEAN .

    SEMI            reduce using rule 12 (bool -> BOOLEAN .)
    NUMBER          reduce using rule 12 (bool -> BOOLEAN .)
    LPRN            reduce using rule 12 (bool -> BOOLEAN .)
    BOOLEAN         reduce using rule 12 (bool -> BOOLEAN .)
    RPRN            reduce using rule 12 (bool -> BOOLEAN .)


state 9

    (1) start -> lisp SEMI .

    $end            reduce using rule 1 (start -> lisp SEMI .)


state 10

    (6) expression -> LPRN PLUS . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 29

state 11

    (7) expression -> LPRN MINUS . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 30

state 12

    (8) expression -> LPRN MULTIPLY . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 31

state 13

    (9) expression -> LPRN DIVIDE . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 32

state 14

    (10) expression -> LPRN IF . bool expression expression RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 34

state 15

    (11) expression -> LPRN CAR . list RPRN
    (22) list -> . LPRN array RPRN
    (25) list -> . LPRN CDR list RPRN
    (26) list -> . LPRN CONS expression list RPRN

    LPRN            shift and go to state 35

    list                           shift and go to state 36

state 16

    (13) bool -> LPRN AND . bool bool RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 37

state 17

    (14) bool -> LPRN OR . bool bool RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 38

state 18

    (15) bool -> LPRN NOT . bool RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 39

state 19

    (16) bool -> LPRN GTE . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 40

state 20

    (17) bool -> LPRN LTE . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 41

state 21

    (18) bool -> LPRN GT . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 42

state 22

    (19) bool -> LPRN LT . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 43

state 23

    (20) bool -> LPRN EQ . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 44

state 24

    (21) bool -> LPRN NEQ . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 45

state 25

    (22) list -> LPRN array . RPRN
    (24) array -> array . expression
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    RPRN            shift and go to state 46
    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 47

state 26

    (25) list -> LPRN CDR . list RPRN
    (22) list -> . LPRN array RPRN
    (25) list -> . LPRN CDR list RPRN
    (26) list -> . LPRN CONS expression list RPRN

    LPRN            shift and go to state 35

    list                           shift and go to state 48

state 27

    (26) list -> LPRN CONS . expression list RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 49

state 28

    (6) expression -> LPRN . PLUS expression expression RPRN
    (7) expression -> LPRN . MINUS expression expression RPRN
    (8) expression -> LPRN . MULTIPLY expression expression RPRN
    (9) expression -> LPRN . DIVIDE expression expression RPRN
    (10) expression -> LPRN . IF bool expression expression RPRN
    (11) expression -> LPRN . CAR list RPRN

    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    MULTIPLY        shift and go to state 12
    DIVIDE          shift and go to state 13
    IF              shift and go to state 14
    CAR             shift and go to state 15


state 29

    (6) expression -> LPRN PLUS expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 50

state 30

    (7) expression -> LPRN MINUS expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 51

state 31

    (8) expression -> LPRN MULTIPLY expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 52

state 32

    (9) expression -> LPRN DIVIDE expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 53

state 33

    (13) bool -> LPRN . AND bool bool RPRN
    (14) bool -> LPRN . OR bool bool RPRN
    (15) bool -> LPRN . NOT bool RPRN
    (16) bool -> LPRN . GTE expression expression RPRN
    (17) bool -> LPRN . LTE expression expression RPRN
    (18) bool -> LPRN . GT expression expression RPRN
    (19) bool -> LPRN . LT expression expression RPRN
    (20) bool -> LPRN . EQ expression expression RPRN
    (21) bool -> LPRN . NEQ expression expression RPRN

    AND             shift and go to state 16
    OR              shift and go to state 17
    NOT             shift and go to state 18
    GTE             shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    LT              shift and go to state 22
    EQ              shift and go to state 23
    NEQ             shift and go to state 24


state 34

    (10) expression -> LPRN IF bool . expression expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 54

state 35

    (22) list -> LPRN . array RPRN
    (25) list -> LPRN . CDR list RPRN
    (26) list -> LPRN . CONS expression list RPRN
    (23) array -> .
    (24) array -> . array expression

    CDR             shift and go to state 26
    CONS            shift and go to state 27
    RPRN            reduce using rule 23 (array -> .)
    NUMBER          reduce using rule 23 (array -> .)
    LPRN            reduce using rule 23 (array -> .)

    array                          shift and go to state 25

state 36

    (11) expression -> LPRN CAR list . RPRN

    RPRN            shift and go to state 55


state 37

    (13) bool -> LPRN AND bool . bool RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 56

state 38

    (14) bool -> LPRN OR bool . bool RPRN
    (12) bool -> . BOOLEAN
    (13) bool -> . LPRN AND bool bool RPRN
    (14) bool -> . LPRN OR bool bool RPRN
    (15) bool -> . LPRN NOT bool RPRN
    (16) bool -> . LPRN GTE expression expression RPRN
    (17) bool -> . LPRN LTE expression expression RPRN
    (18) bool -> . LPRN GT expression expression RPRN
    (19) bool -> . LPRN LT expression expression RPRN
    (20) bool -> . LPRN EQ expression expression RPRN
    (21) bool -> . LPRN NEQ expression expression RPRN

    BOOLEAN         shift and go to state 8
    LPRN            shift and go to state 33

    bool                           shift and go to state 57

state 39

    (15) bool -> LPRN NOT bool . RPRN

    RPRN            shift and go to state 58


state 40

    (16) bool -> LPRN GTE expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 59

state 41

    (17) bool -> LPRN LTE expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 60

state 42

    (18) bool -> LPRN GT expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 61

state 43

    (19) bool -> LPRN LT expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 62

state 44

    (20) bool -> LPRN EQ expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 63

state 45

    (21) bool -> LPRN NEQ expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 64

state 46

    (22) list -> LPRN array RPRN .

    SEMI            reduce using rule 22 (list -> LPRN array RPRN .)
    RPRN            reduce using rule 22 (list -> LPRN array RPRN .)


state 47

    (24) array -> array expression .

    RPRN            reduce using rule 24 (array -> array expression .)
    NUMBER          reduce using rule 24 (array -> array expression .)
    LPRN            reduce using rule 24 (array -> array expression .)


state 48

    (25) list -> LPRN CDR list . RPRN

    RPRN            shift and go to state 65


state 49

    (26) list -> LPRN CONS expression . list RPRN
    (22) list -> . LPRN array RPRN
    (25) list -> . LPRN CDR list RPRN
    (26) list -> . LPRN CONS expression list RPRN

    LPRN            shift and go to state 35

    list                           shift and go to state 66

state 50

    (6) expression -> LPRN PLUS expression expression . RPRN

    RPRN            shift and go to state 67


state 51

    (7) expression -> LPRN MINUS expression expression . RPRN

    RPRN            shift and go to state 68


state 52

    (8) expression -> LPRN MULTIPLY expression expression . RPRN

    RPRN            shift and go to state 69


state 53

    (9) expression -> LPRN DIVIDE expression expression . RPRN

    RPRN            shift and go to state 70


state 54

    (10) expression -> LPRN IF bool expression . expression RPRN
    (5) expression -> . NUMBER
    (6) expression -> . LPRN PLUS expression expression RPRN
    (7) expression -> . LPRN MINUS expression expression RPRN
    (8) expression -> . LPRN MULTIPLY expression expression RPRN
    (9) expression -> . LPRN DIVIDE expression expression RPRN
    (10) expression -> . LPRN IF bool expression expression RPRN
    (11) expression -> . LPRN CAR list RPRN

    NUMBER          shift and go to state 6
    LPRN            shift and go to state 28

    expression                     shift and go to state 71

state 55

    (11) expression -> LPRN CAR list RPRN .

    SEMI            reduce using rule 11 (expression -> LPRN CAR list RPRN .)
    NUMBER          reduce using rule 11 (expression -> LPRN CAR list RPRN .)
    LPRN            reduce using rule 11 (expression -> LPRN CAR list RPRN .)
    RPRN            reduce using rule 11 (expression -> LPRN CAR list RPRN .)


state 56

    (13) bool -> LPRN AND bool bool . RPRN

    RPRN            shift and go to state 72


state 57

    (14) bool -> LPRN OR bool bool . RPRN

    RPRN            shift and go to state 73


state 58

    (15) bool -> LPRN NOT bool RPRN .

    SEMI            reduce using rule 15 (bool -> LPRN NOT bool RPRN .)
    NUMBER          reduce using rule 15 (bool -> LPRN NOT bool RPRN .)
    LPRN            reduce using rule 15 (bool -> LPRN NOT bool RPRN .)
    BOOLEAN         reduce using rule 15 (bool -> LPRN NOT bool RPRN .)
    RPRN            reduce using rule 15 (bool -> LPRN NOT bool RPRN .)


state 59

    (16) bool -> LPRN GTE expression expression . RPRN

    RPRN            shift and go to state 74


state 60

    (17) bool -> LPRN LTE expression expression . RPRN

    RPRN            shift and go to state 75


state 61

    (18) bool -> LPRN GT expression expression . RPRN

    RPRN            shift and go to state 76


state 62

    (19) bool -> LPRN LT expression expression . RPRN

    RPRN            shift and go to state 77


state 63

    (20) bool -> LPRN EQ expression expression . RPRN

    RPRN            shift and go to state 78


state 64

    (21) bool -> LPRN NEQ expression expression . RPRN

    RPRN            shift and go to state 79


state 65

    (25) list -> LPRN CDR list RPRN .

    SEMI            reduce using rule 25 (list -> LPRN CDR list RPRN .)
    RPRN            reduce using rule 25 (list -> LPRN CDR list RPRN .)


state 66

    (26) list -> LPRN CONS expression list . RPRN

    RPRN            shift and go to state 80


state 67

    (6) expression -> LPRN PLUS expression expression RPRN .

    SEMI            reduce using rule 6 (expression -> LPRN PLUS expression expression RPRN .)
    NUMBER          reduce using rule 6 (expression -> LPRN PLUS expression expression RPRN .)
    LPRN            reduce using rule 6 (expression -> LPRN PLUS expression expression RPRN .)
    RPRN            reduce using rule 6 (expression -> LPRN PLUS expression expression RPRN .)


state 68

    (7) expression -> LPRN MINUS expression expression RPRN .
